kubernetes/platform/gitops/argocd/apps/manifests/counter/namespace.yml
---
apiVersion: v1
metadata:
  name: counter
  labels:
    app: counter
    name: counter
kind: Namespace
