kubernetes/platform/gitops/argocd/apps/manifests/counter/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-ingress
  namespace: counter
  labels:
    app: counter
    name: counter-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: counter.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter-svc
                port:
                  number: 80
